src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

/* body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
} */

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #020304;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  div[id*="headlessui-dialog-panel"]{
    background-color: #f3f4f6;
  }
  button {
    background-color: #f8f7f9;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    color: #ebeff1;
    background-color: #1e293b;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #103780;
  }
  div[id*="headlessui-dialog-panel"]{
    background-color: #1b2c47;
  }
  input[type], textarea {
    border-color: rgb(46, 99, 139);
    background-color: transparent;
    color: #ebeff1;
  }
  #textarea {
    border-color: rgb(46, 99, 139);
    background-color: transparent;
    color: #ebeff1;
  }
  
  button[id*='headlessui-listbox-button']{
    background-color: #1b2c47;
    border-color: rgb(46, 99, 139);
  }

  ul[id*='headlessui-listbox-options']{
    background-color: #1b2c47;
    
  }
  li[id*='headlessui-listbox-option']{
    background-color: #102649;
    color:#ebeff1
    
  }
  
}

